src/test/deca/syntax/valid/TestIfThenELse2.deca
{
	int x = 1;
    if (x == 1) {
        println("Bastien");
    }
    else if (x == 3) {
        println("Etienne");
    }
    else if (true) {
        x = 5;
    }
    else {
        println("Louis");
    }
}